2008.11.21: David Nichols
	* added read-write lock to call stack access and creation as ported
	  from qore 0.7.*
 	* fixed configure to properly detect the situation when linkable
	  libraries are in /lib

2008.09.09: David Nichols
	* added --enable-runtime-thread-stack-trace to configure

2008.08.22: David Nichols
	* fixed a bug in an exception string in the Mutex class that could
	  cause a core dump

2008.08.12: David Nichols
	* fixed constant resolution to only increment the recursive count
	  when a constant is recursively defined

2008.02.14: David Nichols
	* fixed a memory leak the use of Object::evalData() when an exception
	  occurs (backported from 0.7.0/trunk)
	* fixed a memory error in QoreString::addch() (backported from 
	  0.7.0/trunk)

2008.02.09: David Nichols
	* fixed a bug where a local variable declared as an immediate call 
	  reference call would cause a run-time core dump

*** v0.6.2.3 RELEASE ***

2008.02.02: David Nichols
	* fixed a bug in regex_subst() (in RegexSubst::parseRT()) that would
	  cause a run-time crash if a regular-expression parse exception were
	  encountered at run-time (backported from 0.7.0/trunk)

2008.01.28: David Nichols
	* fixed a bug in QoreHTTPClient processing the protocol parameter as an
	  integer port number (backported from 0.7.0/trunk)

2008.01.24: David Nichols
	* fixed a bug in the "tibae" module where instantiating a sequence while
	  giving an explicit class name skipped type checking that could result
	  in a crash (backported from 0.7.0/trunk)

2008.01.23: David Nichols
	* fixed a bug in the ? : operator where immediate list values could be
	  returned improperly (only the first element could be erroneously
	  returned under some conditions) (backported from 0.7.0/trunk)
	* fixed a potentially crashing bug in 
	  makeFormattedXMLRPCCallStringArgs() (backported from 0.7.0/trunk)
	* eliminated spurious double exceptions in rare cases with list 
	  operators in Operator.cc (backported from 0.7.0/trunk)
