@@ -285,7 +285,7 @@ EXTRA_DIST = .build next_build.sh WHATISQORE RELEASE-NOTES \
 	docs/img/scrollup.gif \
 	docs/img/word.gif \
 	docs/roadmap.html \
-	qore-0.6.2.4-1.spec \
+	qore.spec \
 	CHANGELOG
 
 dist_man_MANS = qore.1
